fix: bugs with error and overlaping range slider

--- a/src/components/CustomForm/customForm.module.scss
+++ b/src/components/CustomForm/customForm.module.scss
@@ -36,6 +36,10 @@
 			align-items: flex-start;
 			margin-bottom: 15px;
 		}
+
+		&__language {
+			z-index: 9999;
+		}
 	}
 }
 
