--- a/src/index.scss
+++ b/src/index.scss
@@ -16,6 +16,10 @@
 	.range-slider .range-slider__range {
 		border-radius: 6px;
 	}
+
+	.range-slider .range-slider__thumb {
+		z-index: 1;
+	}
 }
 
 
